--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>hospital-gateway</module>
-		<module>hospital-config-server</module>
 		<module>hospital-eureka-server</module>
+		<module>hospital-gateway</module>
+		<module>auth-service</module>
 	</modules>
 
 	<url/>
@@ -55,6 +55,18 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
