chore: add docker-compose with PostgreSQL and init.sql script, update env and datasource config

--- a/.exampe.env
+++ b/.exampe.env
@@ -12,3 +12,8 @@ GATEWAY_URI_AUTH_SERVICE=lb://AUTH-SERVICE
 GATEWAY_URI_CONSULTING_SERVICE=lb://CONSULTING-SERVICE
 GATEWAY_URI_ADMIN_SERVICE=lb://ADMIN-SERVICE
 GATEWAY_URI_REPORTING_SERVICE=lb://REPORTING-SERVICE
+
+DB_POST=5342
+DB_HOSTNAME=localhost
+DB_USERNAME=postgres
+DB_PASSWORD=root
