--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -5,6 +5,18 @@ spring:
   application:
     name:  ${AUTH_NAME}
 
+  datasource:
+    url: jdbc:postgresql://${DB_HOSTNAME}:${DB_PORT}/hospital_system
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: validate
+    show-sql: true
+
 eureka:
   client:
     service-url:
