feat(security): implement JWT authentication and validation through API Gateway
- Auth Service:
  - Added JWT generation with userId, roles and centerId in login flow
  - Embedded claims into the token for downstream service usage

- Gateway:
  - Added JwtValidationFilter to intercept all requests (except login/register)
  - Validates JWT signature and expiration
  - Extracts claims (userId, roles, centerId) and forwards them as custom headers (X-User-Id, X-Roles, X-Center-Id)
  - Rejects unauthorized requests with 401 if token is missing or invalid

This enables centralized authentication in Auth Service and distributed authorization across microservices using propagated headers.

--- a/.exampe.env
+++ b/.exampe.env
@@ -17,3 +17,5 @@ DB_POST=5342
 DB_HOSTNAME=localhost
 DB_USERNAME=postgres
 DB_PASSWORD=root
+
+SECRET_KEY=mySuperSecretKeyForJwtThatShouldBeAtLeast32Chars!!!
