feat(security): enforce roles via gateway headers and AOP @RequireRole in admin-service (no JWT yet)

--- a/.exampe.env
+++ b/.exampe.env
@@ -1,6 +1,9 @@
 AUTH_PORT=8090
 AUTH_NAME=auth-service
 
+ADMIN_SERVICE_PORT=8091
+ADMIN_SERVICE_NAME=admin-service
+
 EUREKA_PORT=8761
 EUREKA_NAME=eureka-server
 EUREKA_HOST=localhost
@@ -13,9 +16,10 @@ GATEWAY_URI_CONSULTING_SERVICE=lb://CONSULTING-SERVICE
 GATEWAY_URI_ADMIN_SERVICE=lb://ADMIN-SERVICE
 GATEWAY_URI_REPORTING_SERVICE=lb://REPORTING-SERVICE
 
-DB_POST=5342
+DB_PORT=5342
 DB_HOSTNAME=localhost
 DB_USERNAME=postgres
 DB_PASSWORD=root
+DB_NAME=hospital_system
 
 SECRET_KEY=mySuperSecretKeyForJwtThatShouldBeAtLeast32Chars!!!
