--- a/consulting-service/src/main/resources/application.yml
+++ b/consulting-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name:  ${CONSULTING_NAME}
 
   datasource:
-    url: jdbc:postgresql://${DB_HOSTNAME}:${DB_PORT}/hospital_system
+    url: jdbc:postgresql://${DB_HOSTNAME}:${DB_PORT}/${DB_NAME}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
