--- a/admin-service/src/main/resources/application.yml
+++ b/admin-service/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 server:
   port: ${ADMIN_SERVICE_PORT:8091}
+  error:
+    include-message: always
+
 
 spring:
+
   application:
     name: ${ADMIN_SERVICE_NAME:admin-service}
 
@@ -18,6 +22,42 @@ spring:
     show-sql: true
     properties:
       hibernate.format_sql: true
+
+  cloud:
+    openfeign:
+      httpclient:
+        enabled: true
+      circuitbreaker:
+        enabled: false
+
+feign:
+  client:
+    config:
+      auth-service:
+        connectTimeout: 2000
+        readTimeout: 3000
+        loggerLevel: BASIC
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      authService:
+        sliding-window-type: COUNT_BASED
+        sliding-window-size: 10
+        failure-rate-threshold: 50
+        slow-call-duration-threshold: 2s
+        wait-duration-in-open-state: 10s
+  retry:
+    instances:
+      authService:
+        max-attempts: 2
+        wait-duration: 200ms
+  ratelimiter:
+    instances:
+      authService:
+        limit-for-period: 10
+        limit-refresh-period: 10s
+        timeout-duration: 0ms
 
 eureka:
   client:
