--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>admin-service</module>
 		<module>auth-service</module>
 		<module>consulting-service</module>
+		<module>report-service</module>
 	</modules>
 
 	<url/>
