feat(auth): add /auth/users/me endpoint to retrieve authenticated user

--- a/hospital-gateway/src/main/resources/application.yml
+++ b/hospital-gateway/src/main/resources/application.yml
@@ -7,6 +7,18 @@ spring:
 
   cloud:
     gateway:
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: ${FRONTEND_URL}
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
+            allowedHeaders: "*"
+            allowCredentials: true
       routes:
         - id: auth-service
           uri: ${GATEWAY_URI_AUTH_SERVICE}
