fix(admin-service)!: handle 404 from exists endpoints gracefully and prevent failures in medical center soft delete
* feign(auth): enable dismiss404 in AuthFeignClient so HEAD /users/by-center/{id}/exists does not throw FeignException on 404
* adapter(AuthUserClientFeign):

  * replace != null checks with explicit resp.getStatusCode().is2xxSuccessful()
  * hasActiveUsersInCenter(...) now returns true on 204 and false on 404

--- a/admin-service/src/main/resources/application.yml
+++ b/admin-service/src/main/resources/application.yml
@@ -80,3 +80,12 @@ management:
     health:
       probes:
         enabled: true
+
+logging:
+  level:
+    # Logger interno de Feign (si usas Logger.Level.FULL)
+    feign: DEBUG
+    # Tus clientes (ajusta el paquete de tus @FeignClient)
+    com.hospital.admin_service.external: DEBUG
+    # El config (para ver nuestro log)
+    com.hospital.admin_service.config.FeignConfig: INFO
