--- a/.exampe.env
+++ b/.exampe.env
@@ -26,3 +26,8 @@ DB_PASSWORD=root
 DB_NAME=hospital_system
 
 SECRET_KEY=mySuperSecretKeyForJwtThatShouldBeAtLeast32Chars!!!
+
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=josuegarcab2@gmail.com
+MAIL_PASSWORD=
