--- a/report-service/.gitignore
+++ b/report-service/.gitignore
@@ -1,5 +1,6 @@
 HELP.md
 target/
+${project.build.directory}/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -31,3 +32,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Documentation and scripts
+*.md
+*.sh
