--- a/report-service/src/main/resources/application.yml
+++ b/report-service/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: ${REPORTING_PORT:8093}
+  port: ${REPORTING_PORT}
 
 spring:
   application:
-    name:  ${REPORTING_NAME}
+    name: ${REPORTING_NAME}
 
   datasource:
     url: jdbc:postgresql://${DB_HOSTNAME}:${DB_PORT}/${DB_NAME}
