feat(docs): add Swagger documentation support across microservices
- Integrated springdoc configuration in gateway and services
- Added OpenAPI annotations for controllers and DTOs
- Enabled Swagger UI aggregation in API Gateway
- Updated pom.xml dependencies for swagger-ui

--- a/.exampe.env
+++ b/.exampe.env
@@ -7,6 +7,9 @@ ADMIN_SERVICE_NAME=admin-service
 CONSULTING_PORT=8095
 CONSULTING_NAME=consulting-service
 
+REPORTING_PORT=8093
+REPORTING_NAME=reporting-service
+
 EUREKA_PORT=8761
 EUREKA_NAME=eureka-server
 EUREKA_HOST=localhost
