--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -1,12 +1,17 @@
 server:
-  port: ${AUTH_PORT:8090}
+  port: ${ADMIN_SERVICE_PORT:8091}
+  forward-headers-strategy: framework
+  error:
+    include-message: always
+
 
 spring:
+
   application:
-    name:  ${AUTH_NAME}
+    name: ${ADMIN_SERVICE_NAME:admin-service}
 
   datasource:
-    url: jdbc:postgresql://${DB_HOSTNAME}:${DB_PORT}/hospital_system
+    url: jdbc:postgresql://${DB_HOSTNAME}:${DB_PORT}/${DB_NAME}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
@@ -14,25 +19,46 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
+    properties:
+      hibernate.format_sql: true
 
   cloud:
     openfeign:
-      circuitbreaker:
+      httpclient:
         enabled: true
+      circuitbreaker:
+        enabled: false
 
-  mail:
-    host: ${MAIL_HOST}
-    port: ${MAIL_PORT}
-    username: ${MAIL_USERNAME}
-    password: ${MAIL_PASSWORD}
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
+feign:
+  client:
+    config:
+      auth-service:
+        connectTimeout: 2000
+        readTimeout: 3000
+        loggerLevel: BASIC
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      authService:
+        sliding-window-type: COUNT_BASED
+        sliding-window-size: 10
+        failure-rate-threshold: 50
+        slow-call-duration-threshold: 2s
+        wait-duration-in-open-state: 10s
+  retry:
+    instances:
+      authService:
+        max-attempts: 2
+        wait-duration: 200ms
+  ratelimiter:
+    instances:
+      authService:
+        limit-for-period: 10
+        limit-refresh-period: 10s
+        timeout-duration: 0ms
 
 eureka:
   client:
@@ -42,3 +68,30 @@ eureka:
     fetch-registry: true
   instance:
     prefer-ip-address: true
+    # evita colisiones cuando haya varias instancias
+    instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
+
+management:
+  endpoints:
+    web:
+      base-path: /admin/actuator
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      probes:
+        enabled: true
+
+logging:
+  level:
+    # Logger interno de Feign (si usas Logger.Level.FULL)
+    feign: DEBUG
+    # Tus clientes (ajusta el paquete de tus @FeignClient)
+    com.hospital.admin_service.external: DEBUG
+    # El config (para ver nuestro log)
+    com.hospital.admin_service.config.FeignConfig: INFO
+
+springdoc:
+  api-docs.path: /v3/api-docs
+  swagger-ui.path: /swagger-ui.html
+
