--- a/consulting-service/pom.xml
+++ b/consulting-service/pom.xml
@@ -74,7 +74,13 @@
 			<scope>provided</scope>
 		</dependency>
 
-	</dependencies>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.13</version>
+        </dependency>
+
+    </dependencies>
 
 
 
