--- a/consulting-service/src/main/resources/application.yml
+++ b/consulting-service/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: ${CONSULTING_PORT:8090}
+  forward-headers-strategy: framework
 
 spring:
   application:
@@ -25,3 +26,7 @@ eureka:
     fetch-registry: true
   instance:
     prefer-ip-address: true
+
+springdoc:
+  api-docs.path: /v3/api-docs
+  swagger-ui.path: /swagger-ui.html
