--- a/hospital-gateway/pom.xml
+++ b/hospital-gateway/pom.xml
@@ -55,7 +55,12 @@
 			<version>0.12.6</version>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+            <version>2.8.13</version>
+        </dependency>
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
