--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -4,6 +4,8 @@ services:
   db:
     image: postgres:15
     container_name: hospital-db
+    env_file:
+      - ./.env
     restart: always
     environment:
       POSTGRES_DB: ${DB_NAME}
