--- a/consulting-service/src/main/resources/application.yml
+++ b/consulting-service/src/main/resources/application.yml
@@ -5,8 +5,15 @@ spring:
   application:
     name:  ${CONSULTING_NAME}
 
+  # Configuración UTF-8 para evitar problemas de encoding
+  http:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+
   datasource:
-    url: jdbc:postgresql://${DB_HOSTNAME}:${DB_PORT}/${DB_NAME}
+    url: jdbc:postgresql://${DB_HOSTNAME}:${DB_PORT}/${DB_NAME}?useUnicode=true&characterEncoding=UTF-8
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
@@ -16,6 +23,10 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        jdbc:
+          charset: utf8
 
 eureka:
   client:
