feat(infra): update gateway routing and database schema
- Update hospital-gateway routes for report service endpoints
- Enhance database schema with additional consultation data
- Improve service discovery configuration

--- a/hospital-gateway/src/main/resources/application.yml
+++ b/hospital-gateway/src/main/resources/application.yml
@@ -40,7 +40,7 @@ spring:
         - id: report-service
           uri: ${GATEWAY_URI_REPORTING_SERVICE}
           predicates:
-            - Path=/api/report/**
+            - Path=/api/reports/**
 
 eureka:
   client:
