--- a/report-service/pom.xml
+++ b/report-service/pom.xml
@@ -98,6 +98,18 @@
             <version>5.2.3</version>
         </dependency>
 
+        <!-- iText - para exportación a PDF -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>html2pdf</artifactId>
+            <version>4.0.5</version>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
