--- a/report-service/pom.xml
+++ b/report-service/pom.xml
@@ -101,7 +101,12 @@
         <!-- iText - para exportación a PDF -->
         <dependency>
             <groupId>com.itextpdf</groupId>
-            <artifactId>itext7-core</artifactId>
+            <artifactId>kernel</artifactId>
+            <version>7.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>layout</artifactId>
             <version>7.2.5</version>
         </dependency>
         <dependency>
